Add consats-linux-turbulence job to consul pipeline
[#133861041]

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -5,6 +5,7 @@ groups:
   - check-git-submodules
   - test-confab
   - consats-linux
+  - consats-linux-turbulence
 
 resources:
 - name: infrastructure-ci
@@ -112,3 +113,46 @@ jobs:
       REGISTRY_HOST: 10.0.0.6
       PARALLEL_NODES: 7
       ENABLE_TURBULENCE_TESTS: false
+
+- name: consats-linux-turbulence
+  public: true
+  serial: true
+  serial_groups: [consats]
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: consul-release
+      resource: consul-release-develop
+      passed: [consats-linux]
+      trigger: true
+    - get: stemcell
+      resource: aws-stemcell
+    - get: windows-stemcell
+    - get: turbulence-release
+    - get: bosh-aws-cpi-release
+    - get: latest-consul-release
+  - task: consats-linux
+    file: ci/scripts/run-consats/task.yml
+    params:
+      AWS_ACCESS_KEY_ID: {{infrastructure_account_aws_access_key_id}}
+      AWS_SECRET_ACCESS_KEY: {{infrastructure_account_aws_secret_access_key}}
+      AWS_REGION: {{infrastructure_account_aws_default_region}}
+      AWS_SECURITY_GROUP_NAME: {{infrastructure_account_aws_security_group_name}}
+      AWS_SUBNETS: {{infrastructure_account_aws_subnets}}
+      AWS_CLOUD_CONFIG_SUBNETS: {{infrastructure_account_aws_cloud_config_subnets}}
+      AWS_DEFAULT_KEY_NAME: {{infrastructure_account_aws_default_key_name}}
+      BOSH_DIRECTOR: {{bosh_director}}
+      BOSH_USER: {{bosh_username}}
+      BOSH_PASSWORD: {{bosh_password}}
+      BOSH_DIRECTOR_CA_CERT: {{bosh_director_ca_cert}}
+      BOSH_ERRAND_CLOUD_CONFIG_NETWORK_STATIC_IP: {{bosh_errand_cloud_config_network_static_ip}}
+      BOSH_ERRAND_CLOUD_CONFIG_NETWORK_AZ: {{bosh_errand_cloud_config_network_az}}
+      BOSH_ERRAND_CLOUD_CONFIG_NETWORK_NAME: {{bosh_errand_cloud_config_network_name}}
+      BOSH_ERRAND_CLOUD_CONFIG_DEFAULT_PERSISTENT_DISK_TYPE: 1GB
+      BOSH_ERRAND_CLOUD_CONFIG_DEFAULT_VM_TYPE: m3.medium
+      REGISTRY_USERNAME: {{registry_username}}
+      REGISTRY_PASSWORD: {{registry_password}}
+      REGISTRY_HOST: 10.0.0.6
+      PARALLEL_NODES: 1
+      ENABLE_TURBULENCE_TESTS: true
