fix reference to task script in delete-deployments task
[#133861041]

--- a/scripts/delete-deployments/task.yml
+++ b/scripts/delete-deployments/task.yml
@@ -10,7 +10,7 @@ inputs:
   - name: ci
 
 run:
-  path: ci/scripts/delete-deployments/task.sh
+  path: ci/scripts/delete-deployments/task
 
 params:
   BOSH_DIRECTOR:
