point to task executable correctly
[#133867865]

Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/scripts/bosh-bootloader/test-bosh-bootloader/task.yml
+++ b/scripts/bosh-bootloader/test-bosh-bootloader/task.yml
@@ -11,4 +11,4 @@ inputs:
 - name: bosh-bootloader
 
 run:
-  path: ci/scripts/bosh-bootloader/test-bosh-bootloader/task.yml
+  path: ci/scripts/bosh-bootloader/test-bosh-bootloader/task
