--- a/scripts/create-final-release/task.yml
+++ b/scripts/create-final-release/task.yml
@@ -7,7 +7,7 @@ image_resource:
     repository: cfinfrastructure/deployment
 
 inputs:
-  - name: mega-ci
+  - name: ci
   - name: oss-s3-buckets-stack
   - name: release-repo
   - name: release-repo-master
