fix names in aws-integration/task.yml
[#133867865]

Signed-off-by: Christian Ang <cang@pivotal.io>

--- a/scripts/bosh-bootloader/aws-integration/task.yml
+++ b/scripts/bosh-bootloader/aws-integration/task.yml
@@ -8,12 +8,12 @@ image_resource:
 
 inputs:
   - name: bosh-bootloader
-  - name: mega-ci
+  - name: ci
 outputs:
   - name: bbl-integration-s3
 
 run:
-  path: mega-ci/scripts/ci/bosh-bootloader/aws_integration
+  path: ci/scripts/bosh-bootloader/aws-integration/task
 
 params:
   AWS_REGION:
