--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -325,7 +325,7 @@ jobs:
       resource: infrastructure-ci
     - get: consul-release
       resource: consul-release-develop
-      passed: [consats-linux-turbulence]
+      passed: [consats-linux-turbulence, consats-windows-turbulence]
       trigger: true
     - get: cf-release
     - get: stemcell
