Update deployment dockerfile to contain both bosh cli's
- bosh v2 cli will be first in PATH

[#140682219]

Signed-off-by: Christian Ang <cang@pivotal.io>

--- a/dockerfiles/deployment/Dockerfile
+++ b/dockerfiles/deployment/Dockerfile
@@ -27,8 +27,13 @@ RUN chmod -R 777 /opt/rubies/
 # Install bundler
 RUN /opt/rubies/ruby-2.2.4/bin/gem install bundler --no-rdoc --no-ri
 
-# Install bosh_cli
+# Install bosh_cli v1
 RUN /opt/rubies/ruby-2.2.4/bin/gem install bosh_cli --no-rdoc --no-ri
+
+# Install bosh_cli v2
+RUN wget https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-2.0.1-linux-amd64 && \
+  mv bosh-cli-2.0.1-linux-amd64 /usr/local/bin/bosh && \
+  chmod +x /usr/local/bin/bosh
 
 # Install terraform
 RUN wget https://releases.hashicorp.com/terraform/0.8.4/terraform_0.8.4_linux_amd64.zip && \
