--- a/dockerfiles/minimal/Dockerfile
+++ b/dockerfiles/minimal/Dockerfile
@@ -16,5 +16,7 @@ RUN \
       apt-get clean
 
 # Create testuser
-RUN groupadd -r testuser -g 433 && \
-	useradd -u 431 -r -g testuser -s /usr/sbin/nologin -c "Docker image test user" testuser
+RUN mkdir -p /home/testuser && \
+	groupadd -r testuser -g 433 && \
+	useradd -u 431 -r -g testuser -d /home/testuser -s /usr/sbin/nologin -c "Docker image test user" testuser && \
+  chown testuser:testuser /home/testuser
