Add cf-deployment pipeline
[#140983013]

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -11,6 +11,11 @@ groups:
   - minor
   - patch
   - github-release
+- name: cf-deployment
+  jobs:
+  - downstream-infrastructure-docker-image
+  - setup-infrastructure
+  - destroy-infrastructure
 
 resources:
 - name: bosh-bootloader-develop
@@ -28,6 +33,12 @@ resources:
   source:
     branch: master
     uri: https://github.com/cloudfoundry/infrastructure-ci.git
+- name: infrastructure-ci-env
+  type: git
+  source:
+    branch: master
+    uri: git@github.com:cloudfoundry/infrastructure-ci-env.git
+    private_key: {{infrastructure_ci_env_private_key}}
 - name: bbl-integration-s3
   type: s3
   source:
@@ -51,7 +62,38 @@ resources:
     repository: bosh-bootloader
     access_token: {{cf_infra_bot_user_github_access_token}}
 
+# CF Deployment Concourse Tasks Resource
+- name: cf-deployment-concourse-tasks
+  type: git
+  source:
+    branch: master
+    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
+    tag_filter: v1.*
+
+- name: cf-deployment-concourse-tasks-docker-image
+  type: docker-image
+  source:
+    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+
+- name: cf-deployment-concourse-tasks-bbl-dev-docker-image
+  type: docker-image
+  source:
+    repository: cfinfrastructure/cf-deployment-concourse-tasks-bbl-dev
+    username: {{docker-username}}
+    password: {{docker-password}}
+    email: {{docker-email}}
+
+- name: cf-deployment-concourse-tasks-bbl-dev-dockerfile
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry/infrastructure-ci
+    branch: master
+    paths:
+    - dockerfiles/cf-deployment-concourse-tasks-bbl-dev
+
 jobs:
+
+# Main Pipeline
 - name: test-bosh-bootloader
   public: true
   plan:
@@ -135,6 +177,7 @@ jobs:
       params:
         file: bbl-integration-s3/*.tgz
 
+# Final Release Pipeline
 - name: major
   public: true
   plan:
@@ -176,3 +219,72 @@ jobs:
       commitish: builds/commitish
       globs:
       - builds/bin/bbl-*
+
+# CF Deployment Pipeline
+- name: downstream-infrastructure-docker-image
+  public: true
+  plan:
+  - do:
+    - aggregate:
+      - get: cf-deployment-concourse-tasks-docker-image
+        trigger: true
+      - get: infrastructure-ci
+        resource: cf-deployment-concourse-tasks-bbl-dev-dockerfile
+        trigger: true
+    - put: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      params:
+        build: infrastructure-ci/dockerfiles/cf-deployment-concourse-tasks-bbl-dev
+        cache: false
+
+- name: setup-infrastructure
+  serial_groups: [downstream]
+  public: true
+  build_logs_to_retain: 100
+  plan:
+  - aggregate:
+    - get: cf-deployment-concourse-tasks
+    - get: infrastructure-ci-env
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      passed: [downstream-infrastructure-docker-image]
+  - task: setup-infrastructure
+    file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    params:
+      BBL_IAAS: gcp
+      BBL_GCP_SERVICE_ACCOUNT_KEY: google_account_creds.json
+      BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+      BBL_GCP_REGION: us-east1
+      BBL_GCP_ZONE: us-east1-b
+      BBL_LB_CERT: {{bbl_downstream_cf_ssl_cert}}
+      BBL_LB_KEY: {{bbl_downstream_cf_ssl_cert_private_key}}
+      LB_DOMAIN: bbl-downstream.bbl-test.ci.cf-app.com
+      BBL_ENV_NAME: bbl-downstream
+      BBL_STATE_DIR: bbl-downstream-env
+    input_mapping:
+      bbl-state: infrastructure-ci-env
+    ensure:
+      put: infrastructure-ci-env
+      params:
+        repository: updated-bbl-state
+        rebase: true
+
+- name: destroy-infrastructure
+  serial_groups: [downstream]
+  public: true
+  build_logs_to_retain: 100
+  plan:
+  - aggregate:
+    - get: cf-deployment-concourse-tasks
+    - get: infrastructure-ci-env
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      passed: [setup-infrastructure]
+  - task: destroy-infrastructure
+    file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    input_mapping:
+      bbl-state: infrastructure-ci-env
+    ensure:
+      put: infrastructure-ci-env
+      params:
+        repository: updated-bbl-state
+        rebase: true
