Fix issue with ginkgo race tests with golang 1.8.
[#141270465]

Signed-off-by: Dave Walter <dwalter@pivotal.io>

--- a/dockerfiles/golang/Dockerfile
+++ b/dockerfiles/golang/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER https://github.com/cloudfoundry/infrastructure-ci
 RUN wget https://storage.googleapis.com/golang/go1.8.linux-amd64.tar.gz && \
   tar -C /usr/local -xzf go1.8.linux-amd64.tar.gz && \
   rm -rf go1.8.linux-amd64.tar.gz
+RUN chown -R testuser:testuser /usr/local/go/pkg
 
 # Create directory for GOPATH
 RUN mkdir -p /go/bin
